# thai_voice_transcription

./: chunking_audio.ipynb  dev_audio_capture.ipynb  main.py  pyproject.toml  requirements.txt  speech_regcognition.ipynb  task.md  test.ipynb  test_chunking.ipynb  test_chunking_transcribe.ipynb  test_sd.py  test_typhoonasr.ipynb  test_typhoonasr.py  test_whisper.py  typhoonasr_inference.ipynb
package/typhoon/: inference.py  load_model.py  preprocessing.py
