[project]
name = "thai-voice-transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "sounddevice>=0.5.3",
    "torchaudio>=2.9.1",
    "transformers>=4.57.1",
    "typhoon-asr>=0.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
