[project]
name = "thai-voice-transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "alembic>=1.16.5",
    "antlr4-python3-runtime>=4.9.3",
    "appnope>=0.1.4",
    "asteroid-filterbanks>=0.4.0",
    "asttokens>=3.0.0",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "audioread>=3.0.1",
    "backcall>=0.2.0",
    "beautifulsoup4>=4.13.5",
    "bleach>=6.2.0",
    "braceexpand>=0.1.7",
    "certifi>=2025.8.3",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.3",
    "click>=8.3.0",
    "colorlog>=6.9.0",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "cytoolz>=1.0.1",
    "datasets>=4.1.1",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "dill>=0.4.0",
    "docopt>=0.6.2",
    "editdistance>=0.8.1",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.1",
    "fastapi>=0.117.1",
    "faster-whisper>=1.2.0",
    "fastjsonschema>=2.21.2",
    "filelock>=3.19.1",
    "fonttools>=4.60.0",
    "frozenlist>=1.7.0",
    "fsspec>=2024.12.0",
    "grpcio>=1.75.0",
    "hf-xet>=1.1.10",
    "huggingface-hub>=0.35.0",
    "hydra-core>=1.3.2",
    "hyperpyyaml>=1.2.2",
    "idna>=3.10",
    "intervaltree>=3.1.0",
    "ipython>=9.5.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiwer>=4.0.0",
    "joblib>=1.5.2",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "julius>=0.2.7",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab-pygments>=0.3.0",
    "kiwisolver>=1.4.9",
    "lazy-loader>=0.4",
    "lhotse>=1.31.1",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "lightning-utilities>=0.15.2",
    "lilcom>=1.8.1",
    "llvmlite>=0.45.0",
    "mako>=1.3.10",
    "markdown>=3.9",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.6",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "mistune>=3.1.4",
    "mpmath>=1.3.0",
    "msgpack>=1.1.1",
    "multidict>=6.6.4",
    "multiprocess>=0.70.16",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nemo-toolkit>=2.4.0",
    "networkx>=3.5",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "onnx>=1.19.0",
    "optuna>=4.5.0",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "pandocfilters>=1.5.1",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "pillow>=11.3.0",
    "pipreqs>=0.4.13",
    "platformdirs>=4.4.0",
    "pooch>=1.8.2",
    "primepy>=1.3",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.3.2",
    "protobuf>=5.29.5",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyannote-audio>=3.4.0",
    "pyannote-core>=5.0.0",
    "pyannote-database>=5.1.3",
    "pyannote-metrics>=3.2.1",
    "pyannote-pipeline>=3.0.1",
    "pyarrow>=21.0.0",
    "pycparser>=2.23",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytorch-lightning>=2.5.5",
    "pytorch-metric-learning>=2.9.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "pyzmq>=27.1.0",
    "rapidfuzz>=3.14.1",
    "referencing>=0.36.2",
    "regex>=2025.9.18",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "rpds-py>=0.27.1",
    "ruamel-yaml>=0.18.15",
    "ruamel-yaml-clib>=0.2.14",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "semver>=3.0.4",
    "sentencepiece>=0.2.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sortedcontainers>=2.4.0",
    "soundfile>=0.13.1",
    "soupsieve>=2.8",
    "soxr>=1.0.0",
    "speechbrain>=1.0.3",
    "sqlalchemy>=2.0.43",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboardx>=2.6.4",
    "text-unidecode>=1.3",
    "threadpoolctl>=3.6.0",
    "tinycss2>=1.4.0",
    "tokenizers>=0.22.1",
    "tomli>=2.2.1",
    "toolz>=1.0.0",
    "torch>=2.7.1",
    "torch-audiomentations>=0.12.0",
    "torch-pitch-shift>=1.2.5",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.22.1",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.56.2",
    "typer>=0.19.1",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "uvicorn>=0.36.0",
    "wcwidth>=0.2.14",
    "webdataset>=1.0.2",
    "webencodings>=0.5.1",
    "werkzeug>=3.1.3",
    "wget>=3.2",
    "wrapt>=1.17.3",
    "xxhash>=3.5.0",
    "yarg>=0.1.10",
    "yarl>=1.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
