[project]
name = "thai-voice-transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nemo-toolkit[asr]>=1.21.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "numpy<2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
